--- a/Hand_Tracking.ipynb
+++ b/Hand_Tracking.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "78337e89-5295-4b96-95e0-075ea8d147d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "hand_boundary_poc.py\n",
-    "POC: real-time hand-to-virtual-boundary detection\n",
-    "Dependencies: opencv-python, numpy\n",
-    "Run: python hand_boundary_poc.py\n",
-    "Press:\n",
-    "  q - quit\n",
-    "  s - toggle showing skin mask\n",
-    "  p - pause\n",
-    "\"\"\"\n",
+    "\n",
     "\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -24,7 +15,7 @@
     "\n",
     "# ----------------- utils -----------------\n",
     "def point_rect_dist(px, py, rx1, ry1, rx2, ry2):\n",
-    "    \"\"\"Return shortest Euclidean distance from point to rectangle (0 if inside).\"\"\"\n",
+    "    \n",
     "    if px < rx1:\n",
     "        dx = rx1 - px\n",
     "    elif px > rx2:\n",
@@ -63,8 +54,7 @@
     "            frame = cv2.flip(frame, 1)  # mirror\n",
     "            h, w = frame.shape[:2]\n",
     "\n",
-    "            # ------------- Virtual object / boundary -------------\n",
-    "            # Draw a central rectangle as the virtual boundary (customize as you like)\n",
+    "            # Virtual object \n",
     "            rect_w = int(w * 0.28)\n",
     "            rect_h = int(h * 0.35)\n",
     "            rect_x1 = w // 2 - rect_w // 2\n",
@@ -72,30 +62,30 @@
     "            rect_x2 = rect_x1 + rect_w\n",
     "            rect_y2 = rect_y1 + rect_h\n",
     "\n",
-    "            # ------------- Skin detection (YCrCb) -------------\n",
+    "            #  Skin detection (YCrCb) \n",
     "            ycrcb = cv2.cvtColor(frame, cv2.COLOR_BGR2YCrCb)\n",
-    "            # Common approximate skin range in YCrCb (can be tuned)\n",
+    "            \n",
     "            lower = np.array([0, 133, 77], dtype=np.uint8)\n",
     "            upper = np.array([255, 173, 127], dtype=np.uint8)\n",
     "            mask = cv2.inRange(ycrcb, lower, upper)\n",
     "\n",
-    "            # Morphology to clean mask\n",
+    "            \n",
     "            kernel = cv2.getStructuringElement(cv2.MORPH_ELLIPSE, (5,5))\n",
     "            mask = cv2.morphologyEx(mask, cv2.MORPH_OPEN, kernel, iterations=1)\n",
     "            mask = cv2.morphologyEx(mask, cv2.MORPH_CLOSE, kernel, iterations=2)\n",
     "            mask = cv2.GaussianBlur(mask, (7,7), 0)\n",
     "\n",
-    "            # ------------- Find contours -------------\n",
+    "            #  Find contours \n",
     "            contours, _ = cv2.findContours(mask, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "            hand_contour = None\n",
     "            hand_bbox = (0,0,0,0)\n",
     "            if contours:\n",
-    "                # pick largest contour by area\n",
+    "                \n",
     "                contours = sorted(contours, key=cv2.contourArea, reverse=True)\n",
-    "                # ensure the largest is big enough to reduce false positives\n",
+    "                \n",
     "                for cnt in contours:\n",
     "                    area = cv2.contourArea(cnt)\n",
-    "                    if area > (w*h)*0.002:  # tune minimum area relative to frame\n",
+    "                    if area > (w*h)*0.002:  \n",
     "                        hand_contour = cnt\n",
     "                        x,y,ww,hh = cv2.boundingRect(cnt)\n",
     "                        hand_bbox = (x,y,ww,hh)\n",
@@ -107,28 +97,28 @@
     "\n",
     "            min_dist = None\n",
     "            if hand_contour is not None:\n",
-    "                # draw contour and bbox\n",
+    "                \n",
     "                cv2.drawContours(frame, [hand_contour], -1, (200,200,0), 2)\n",
     "                x,y,ww,hh = hand_bbox\n",
     "                cv2.rectangle(frame, (x,y), (x+ww, y+hh), (255,200,0), 1)\n",
     "\n",
-    "                # compute min distance from contour points to rectangle\n",
+    "                \n",
     "                contour_pts = hand_contour.reshape(-1,2)\n",
     "                dists = [point_rect_dist(int(px), int(py), rect_x1, rect_y1, rect_x2, rect_y2) for (px,py) in contour_pts]\n",
     "                min_dist = float(min(dists))\n",
     "\n",
-    "                # scale thresholds by hand size (use bounding box max dimension)\n",
+    "                \n",
     "                hand_size = max(ww, hh, 1)\n",
-    "                # thresholds (tune as needed)\n",
-    "                danger_thresh = 0.25 * hand_size    # close -> danger (in pixels)\n",
-    "                warning_thresh = 0.9 * hand_size    # approaching -> warning\n",
-    "                # If hand inside rect -> distance is 0 -> DANGER\n",
+    "                \n",
+    "                danger_thresh = 0.25 * hand_size    \n",
+    "                warning_thresh = 0.9 * hand_size    \n",
+    "                \n",
     "                if min_dist <= danger_thresh:\n",
     "                    state = \"DANGER\"\n",
     "                    state_color = (0,0,255)\n",
     "                elif min_dist <= warning_thresh:\n",
     "                    state = \"WARNING\"\n",
-    "                    state_color = (0,165,255)  # orange\n",
+    "                    state_color = (0,165,255)  \n",
     "                else:\n",
     "                    state = \"SAFE\"\n",
     "                    state_color = (0,255,0)\n",
@@ -137,18 +127,17 @@
     "                state = \"SAFE\"\n",
     "                state_color = (0,255,0)\n",
     "\n",
-    "            # ------------- Draw virtual object and overlays -------------\n",
-    "            # colored rectangle border changes with state\n",
+    "            #  Draw virtual object and overlays \n",
+    "            \n",
     "            thickness = 3\n",
     "            cv2.rectangle(frame, (rect_x1, rect_y1), (rect_x2, rect_y2), state_color, thickness)\n",
     "\n",
-    "            # draw a small line from the closest contour point to the rect if exist\n",
+    "            \n",
     "            if hand_contour is not None:\n",
-    "                # find the contour point with min dist (index)\n",
+    "                \n",
     "                idx = int(np.argmin(dists))\n",
     "                px, py = contour_pts[idx]\n",
-    "                # project that point to rectangle (closest point on rect)\n",
-    "                # compute closest point coordinates\n",
+    "                \n",
     "                cx = min(max(px, rect_x1), rect_x2)\n",
     "                cy = min(max(py, rect_y1), rect_y2)\n",
     "                cv2.line(frame, (int(px),int(py)), (int(cx),int(cy)), state_color, 2)\n",
@@ -162,11 +151,11 @@
     "\n",
     "            # danger overlay\n",
     "            if state == \"DANGER\":\n",
-    "                # flashing \"DANGER DANGER\"\n",
+    "                \n",
     "                t = int(time.time() * 2)  # change 2 -> frequency\n",
     "                if t % 2 == 0:\n",
     "                    cv2.putText(frame, \"DANGER DANGER\", (w//6, h//4), cv2.FONT_HERSHEY_DUPLEX, 2.2, (0,0,255), 5)\n",
-    "                    # optional red translucent overlay\n",
+    "                    \n",
     "                    overlay = frame.copy()\n",
     "                    cv2.rectangle(overlay, (0,0), (w,h), (0,0,255), -1)\n",
     "                    alpha = 0.12\n",
@@ -180,9 +169,9 @@
     "                fps = 0.9 * fps + 0.1 * (1.0/dt) if fps>0 else (1.0/dt)\n",
     "            cv2.putText(frame, f\"FPS: {fps:.1f}\", (w-150, 30), cv2.FONT_HERSHEY_SIMPLEX, 0.7, (200,200,200), 2)\n",
     "\n",
-    "            # show mask optionally\n",
+    "            \n",
     "            if show_mask:\n",
-    "                # To make mask visualization same height, convert to BGR\n",
+    "                \n",
     "                mask_bgr = cv2.cvtColor(mask, cv2.COLOR_GRAY2BGR)\n",
     "                combined = np.hstack((cv2.resize(frame, (int(w*2/3), int(h*2/3))),\n",
     "                                      cv2.resize(mask_bgr, (int(w*2/3), int(h*2/3)))))\n",
@@ -190,7 +179,7 @@
     "            else:\n",
     "                cv2.imshow(\"Hand Boundary POC\", frame)\n",
     "\n",
-    "        # key handling\n",
+    "\n",
     "        k = cv2.waitKey(1) & 0xFF\n",
     "        if k == ord('q'):\n",
     "            break\n",
